feat: ADMIN, CHANNEL_MANAGER, USER 권한 정의