@@ -1,11 +1,13 @@
 package com.sprint.mission.discodeit.auth.service;
 
 import com.sprint.mission.discodeit.dto.response.UserResponse;
+import com.sprint.mission.discodeit.entity.User;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 @Getter
@@ -14,15 +16,17 @@ public class DiscodeitUserDetails implements UserDetails {
 
     private final UserResponse userResponse;
     private final String password;
+    private final User user;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        System.out.println("[CustomUserDetails] getAuthorities 실행됨");
+        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()));
     }
 
     @Override
     public String getPassword() {
-        return password; // 파라미터로 받은 해시된 비밀번호
+        return password;
     }
 
     @Override
